--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
     "orchestra/testbench": "^7.0|^8.0|^9.0"
   },
   "require": {
-    "php": "^8.0",
-    "filament/filament": "^3.0@stable"
+    "php": "^8.1",
+    "filament/filament": "^3.0@stable",
+    "illuminate/contracts": "^9.0|^10.0|^11.0"
   },
   "extra": {
     "laravel": {
